Replace calls to deprecated method Class#newInstance
Part of #435 and Bugzilla Id: 62972


git-svn-id: https://svn.apache.org/repos/asf/jmeter/trunk@1847989 13f79535-47bb-0310-9956-ffa450edef68

Former-commit-id: faf53bbd88b22fd5ca664c043b0e882486a92675