@@ -243,8 +243,8 @@ public class GenericTestBeanCustomizer extends JPanel implements SharedCustomize
 
                 if (editorClass != null) {
                     try {
-                        propertyEditor = (PropertyEditor) editorClass.newInstance();
-                    } catch (InstantiationException | IllegalAccessException e) {
+                        propertyEditor = (PropertyEditor) editorClass.getDeclaredConstructor().newInstance();
+                    } catch (ReflectiveOperationException e) {
                         log.error("Can't create property editor.", e);
                         throw new Error(e.toString());
                     }
